# polyglot-rpg-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
example_project/ironsworn/: 01_config.yaml
example_project/ironsworn/02_input_chapters/: Ch1.The_Basics_p1.md  Ch1.The_Basics_p2.md  Ch1.The_Basics_p3.md
example_project/ironsworn/03_translation_workspace/: 2_glossary.final.yaml  2_glossary.for_review.yaml
example_project/ironsworn/03_translation_workspace/.cache/: translations_cache.json
example_project/ironsworn/03_translation_workspace/1_asts/: Ch1.The_Basics_p1.ast.json  Ch1.The_Basics_p2.ast.json  Ch1.The_Basics_p3.ast.json
example_project/ironsworn/03_translation_workspace/3_translated_asts/: Ch1.The_Basics_p1.translated.ast.json  Ch1.The_Basics_p2.translated.ast.json  Ch1.The_Basics_p3.translated.ast.json
example_project/ironsworn/03_translation_workspace/4_final_chapters/: Ch1.The_Basics_p1.md  Ch1.The_Basics_p2.md  Ch1.The_Basics_p3.md
polyglot_rpg/: default_config_template.yaml  main.py
